# DTP2023-AS91906

./: .gitignore  Cargo.toml  README.md
class/: index.html
public/: index.html  signin.html  teachers.html  welcome.html
public/policies/: cookies.html  privacy.html
src/: handlers.rs  main.rs  shutdown.rs
src/data/: database.rs  mod.rs
src/http/: handler.rs  ip_and_port.rs  mod.rs  shutdown.rs
src/http/query/: class_uid.rs  classes.rs  mod.rs  perms.rs  user.rs
static/: cookies.js
static/css/: classroom.css  dashboard.css  policies.css  style.css  welcome.css
static/js/: classroom.js  cookies.js  dashboard.js  loading.js  teacher.js  web.js  welcome.js
