[package]
name = "dtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
axum-server = "0.5.1"
http-body-util = "0.1.0-rc.2"
include_dir = "0.7.3"
itertools = "0.10.5"
mime_guess = "2.0.4"
serde = "1.0.163"
tokio = { version = "1.27.0", features = ["full"] }
