[package]
name = "dtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-mutex = "1.4.0"
async-trait = "0.1.68"
axum = "0.6.12"
axum-server = "0.5.1"
dotenv = "0.15.0"
firestore = "0.32.2"
futures = "0.3.28"
gcloud-sdk = "0.20.3"
http-body-util = "0.1.0-rc.2"
include_dir = "0.7.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.14"
uuid = { version = "1.4.1", features = ["v4"] }
